apps/applications/iot/z2mqtt/deployment.yaml
# 8-z2m-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: iot
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
        networking/expose-web-ui: "true"
    spec:
      containers:
        - name: zigbee2mqtt
          image: ghcr.io/koenkk/zigbee2mqtt
          ports:
            - containerPort: 8080
              name: web-ui
          volumeMounts:
            - name: data
              mountPath: /app/data
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data-pvc
        - name: config
          configMap:
            name: zigbee2mqtt-config
