apps/applications/iot/z2mqtt/service.yaml
# 9-z2m-service-and-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt-svc
  namespace: iot
spec:
  selector:
    app: zigbee2mqtt
  ports:
    - name: web-ui
      port: 8080
