apps/applications/iot/z2mqtt/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zigbee2mqtt-policy
  namespace: iot
spec:
  endpointSelector:
    matchLabels:
      app: zigbee2mqtt
  
  # ----=== Ingress ===----
  ingress:
    # === Allow access from Traefik ===
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "frontend" # 8080
              protocol: TCP

  # ----=== Egress ===----
  egress:
    # === Allow DNS ===
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: coredns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # === Allow access to services ===
    - toServices:
        - k8sService:
            serviceName: mosquitto-svc
            namespace: iot
    # === Allow traffic to the Zigbee Coordinator ===
    - toCIDR:
        - 192.168.4.36/32
      toPorts:
        - ports:
            - port: "6638"
              protocol: TCP
